0.9.0
- [bug] Fixed the babel plugin to properly interpret ${} sections
  inside of a "call" tag, i.e. <%self:some_tag attr="${_('foo')}"/>.
  Code that's subject to babel escapes in here needs to be
  specified as a Python expression, not a literal.  This change
  is backwards incompatible vs. code that is relying upon a _('')
  translation to be working within a call tag.

- [bug] The Babel plugin has been repaired to work on Python 3.
  [ticket:187]

- [bug] Using <%namespace import="*" module="somemodule"/> now
  skips over module elements that are not explcitly callable,
  avoiding TypeError when trying to produce partials.
  [ticket:207]

- [bug] Fixed Py3K bug where a "lambda" expression was not
  interpreted correctly within a template tag.  [ticket:190]

0.8.1
- [bug] Changed setup.py to skip installing markupsafe
  if Python version is < 2.6 or is between 3.0 and
  less than 3.3, as Markupsafe now only supports 2.6->2.X,
  3.3->3.X. [ticket:216]

- [bug] Fixed regression where "entity" filter wasn't
  converted for py3k properly (added tests.)
  [ticket:214]

- [bug] Fixed bug where mako-render script wasn't
  compatible with Py3k.  [ticket:212]

- [bug] Cleaned up all the various deprecation/
  file warnings when running the tests under
  various Pythons with warnings turned on.
  [ticket:213]

0.8.0
- [feature] Performance improvement to the
  "legacy" HTML escape feature, used for XML
  escaping and when markupsafe isn't present,
  courtesy George Xie.

- [bug] Fixed bug whereby an exception in Python 3
  against a module compiled to the filesystem would
  fail trying to produce a RichTraceback due to the
  content being in bytes. [ticket:209]

- [bug] Change default for compile()->reserved_names
  from tuple to frozenset, as this is expected to be
  a set by default.  [ticket:208]

- [feature] Code has been reworked to support Python 2.4->
  Python 3.xx in place.  2to3 no longer needed.

- [feature] Added lexer_cls argument to Template,