@@ -1,4 +1,10 @@
 0.9.0
+- [bug] The Context.locals_() method becomes a private underscored
+  method, as this method has a specific internal use. The purpose
+  of Context.kwargs has been clarified, in that it only delivers
+  top level keyword arguments originally passed to template.render().
+  [ticket:219]
+
 - [bug] Fixed the babel plugin to properly interpret ${} sections
   inside of a "call" tag, i.e. <%self:some_tag attr="${_('foo')}"/>.
   Code that's subject to babel escapes in here needs to be
